Update 1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements.md

--- a/DOMAIN1: The Cybersecurity Manager/1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.7 Identify, analyze, assess, prioritize, and implement Business Continuity (BC) requirements.md
@@ -51,4 +51,162 @@ The goal of this process is to create a continuity of operations plan (COOP), wh
 
 :link: NIST SP 800-34 contains the guidelines to develop an IT contingency plan: https://www.nist.gov/privacy-framework/nist-sp-800-34
 
+### Open Questions ###
+1. What are the three primary facets of Business Continuity, and briefly explain each?
+<details>
+  <summary>Show answer</summary>
+Resilience: The ability of systems to withstand disruptions. Recovery: The process of restoring systems after an outage. Contingency: The last resort plan when resilience and recovery fail. 
+</details>
 
+2. Explain the key differences between Business Continuity Planning (BCP) and Disaster Recovery (DR).
+<details>
+  <summary>Show answer</summary>
+BCP is strategically focused on maintaining overall business operations during disruptions, while DR is more tactical, focusing on technical recovery of IT systems and data.
+</details>
+
+3. What is the purpose of a Business Impact Analysis (BIA) in the BCP process?
+<details>
+  <summary>Show answer</summary>
+BIA identifies critical systems and services, assesses the potential impact of disruptions on them, and prioritizes their recovery.
+</details>
+
+4. Define the terms Recovery Time Objective (RTO) and Recovery Point Objective (RPO).
+<details>
+  <summary>Show answer</summary>
+RTO is the maximum acceptable time to recover a system after an outage. RPO is the maximum tolerable data loss that can occur.
+</details>
+
+5. What is the significance of Maximum Tolerable Downtime (MTD) in a BIA?
+<details>
+  <summary>Show answer</summary>
+MTD represents the maximum duration a business can function without a specific system before facing severe consequences. It helps determine the urgency of recovery efforts.
+</details>
+
+6. Describe the two primary subtasks involved in the Continuity Planning phase of the BCP process.
+<details>
+  <summary>Show answer</summary>
+The two subtasks are Strategy Development (defining the continuity strategy) and Provisions and Processes (outlining specific procedures and resources).
+</details>
+
+7. What is the primary output of the Continuity Planning phase? Briefly describe its purpose.
+<details>
+  <summary>Show answer</summary>
+The primary output is the Continuity of Operations Plan (COOP), which outlines how an organization will maintain essential functions during and after a disruption.
+</details>
+
+8. Why is senior management buy-in crucial for the successful implementation of a BCP plan?
+<details>
+  <summary>Show answer</summary>
+Senior management buy-in ensures resource allocation, policy enforcement, and organizational commitment to BCP implementation.
+</details>
+
+9. What is the overarching priority in both BCP and DR? Explain its importance.
+<details>
+  <summary>Show answer</summary>
+The top priority is people's safety. Ensuring the well-being of employees and stakeholders is paramount before addressing IT or operational concerns.
+</details>
+
+10. What resources can organizations use for guidance in developing an IT contingency plan?
+<details>  
+  <summary>Show answer</summary>
+Organizations can use NIST SP 800-34, a publication from the National Institute of Standards and Technology, as a guide for developing their IT contingency plans.
+</details>
+
+---
+
+## 1.7.1 Business impact analysis (BIA) ##
+
+According to the International Organization for Standardization (ISO), a BIA is: *The process of analyzing the impact over time of a disruption on the organization.*
+Essentially, a BIA helps an organization identify its critical business functions (CBFs) and understand the potential impact of a disaster or disruption on these functions. This analysis serves as the foundation for the business continuity plan (BCP).
+
+The BIA process relies on several key metrics to quantify the potential impact of disruptions:
+**MTD (Maximum Tolerable Downtime)**: This is the maximum duration a business process can be unavailable before causing severe damage to the company.
+*Think of it as the time limit for getting everything back to normal before serious problems arise. A bank’s online services might have an MTD of 4 hours. If customers can’t access their accounts for more than 4 hours, the bank could face significant reputational damage or regulatory penalties.*
+**RPO (Recovery Point Objective)**: RPO defines the acceptable amount of data loss in case of a disaster. It specifies the point in time to which data must be restored.
+*For example if the RPO for the bank's customer transactions is 15 minutes, the backup systems need to save data at least every 15 minutes to avoid losing important transactions during an outage.*
+**RTO (Recovery Time Objective)**: RTO is the target time for restoring a system, application, or process after a disruption.
+*If the bank’s mobile app has an RTO of 1 hour, the IT team needs to ensure the app is functional again within an hour of going offline.*
+**WRT (Work Recovery Time)**: WRT refers to the time needed for testing and verifying restored systems before they go live.
+*After restoring the bank’s online services in 1 hour (RTO), the team might need 30 additional minutes to test that login systems, transaction features, and notifications are working correctly. This 30 minutes is the WRT.*
+
+![MTD](https://github.com/user-attachments/assets/c2f8f2b7-5d79-4721-b619-536a2a8c52d5)
+
+The following steps are of fundamental importance in conducting a successful BIA:
+- Executive Support: Securing buy-in from senior leadership is crucial, as BCP initiatives may not yield immediate tangible returns but are vital for long-term resilience.
+- Project Team, Scope, and Budget: Defining the project team, scope, and budget ensures a focused and efficient BIA process.
+- Identifying CBFs (Critical Business Factors): This is a critical step involving input from various stakeholders like system owners, subject-matter experts, customers, and suppliers.
+- Impact Assessment: Analyzing the impact of disruptions on each CBF, considering the aforementioned metrics (MTD, RPO, RTO, WRT).
+
+
+The following elements have to be considered when identifying CBFs:
+- Personnel: Key personnel and their roles in maintaining critical operations.
+- Business Processes: Essential business processes that drive revenue or ensure operational continuity.
+- Information Systems and Applications: Critical IT systems and applications supporting core business functions.
+- Other Assets: Physical assets, intellectual property, or other resources vital for business operations.
+
+:link: Explore the fundamentals of company resilience by understanding Maximum Tolerable Downtime (MTD) and Recovery Point Objective (RPO): https://medium.com/@lorenzoleonelli/a-short-guide-of-metrics-for-foolproof-data-protection-rpo-and-mtd-explained-9f58d43dee36
+
+### Open Questions ###
+1. Explain the primary purpose of a Business Impact Analysis (BIA).
+<details>
+  <summary>Show answer</summary>
+The BIA identifies critical business functions and assesses the potential impact of disruptions on those functions over time. This helps organizations prioritize recovery efforts and resource allocation.
+</details>
+
+2. What is the difference between RTO and WRT?
+<details>
+  <summary>Show answer</summary>
+RTO focuses on the time to restore a system's basic functionality, while WRT accounts for the additional time required to thoroughly test and verify its complete functionality before making it live.
+</details>
+
+3. Why is defining the MTD crucial in business continuity planning?
+<details>
+  <summary>Show answer</summary>
+MTD defines the maximum allowable downtime before a business function faces severe consequences. Understanding this limit drives the urgency and prioritization of recovery efforts.
+</details>
+
+4. How does RPO influence a company's backup strategy?
+<details>
+  <summary>Show answer</summary>
+The RPO dictates the frequency of backups required to ensure the acceptable level of data loss. For a shorter RPO, more frequent backups are needed.
+</details>
+
+5. List three examples of potential "critical business functions" in a manufacturing company.
+<details>
+  <summary>Show answer</summary>
+Examples include: Manufacturing operations, supply chain management, order fulfillment, customer service.
+</details>
+
+6. Explain why executive support is essential for successful Business Continuity Planning.
+<details>
+  <summary>Show answer</summary>
+BCP requires resources, budget, and organizational buy-in to implement effectively. Executive support helps secure these resources and ensures alignment with overall business goals.
+</details>
+
+7. If a company has an RPO of 2 hours for its financial data, what does this imply about their backup frequency?
+<details>
+  <summary>Show answer</summary>
+An RPO of 2 hours means the company must back up its financial data at least every 2 hours to avoid losing more than 2 hours' worth of data in a disaster.
+</details>
+
+8. What could be the potential consequences of exceeding the MTD for a hospital's emergency room system?
+<details>
+  <summary>Show answer</summary>
+Exceeding the MTD for a hospital's emergency room system could result in life-threatening delays in patient care, reputational damage, and potential legal liabilities.
+</details>
+
+9. Besides IT systems, what other "essential business elements" should a BIA consider?
+<details>
+  <summary>Show answer</summary>
+A BIA should consider personnel, business processes, and other assets essential for maintaining operations, such as facilities, equipment, and critical relationships.
+</details>
+
+10. Describe the relationship between a Business Impact Analysis (BIA) and a Business Continuity Plan (BCP).
+<details>  
+  <summary>Show answer</summary>
+The BIA provides the foundation for the BCP. By identifying critical functions and their potential impact, the BIA helps determine the necessary recovery strategies and resources to be outlined in the BCP. 
+</details>
+
+---
+
+## 1.7.2 External dependencies ##
