Update 1.8 Contribute to and enforce personnel security policies and procedures.md

--- a/DOMAIN1: The Cybersecurity Manager/1.8 Contribute to and enforce personnel security policies and procedures.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.8 Contribute to and enforce personnel security policies and procedures.md
@@ -11,12 +11,14 @@ A well-defined job description should include:
 - Duties & Responsibilities – Lists specific tasks and expectations.
 - Required Skills & Qualifications – Specifies expertise needed.
 - Security Responsibilities – Defines how the role interacts with security policies.
-Job responsibilities define the specific duties, tasks, and expectations assigned to a particular role within an organization. These responsibilities are crucial because they clarify what an employee is expected to do and, in a security context, help determine the level of access they should have to sensitive systems and data.
+
+**Job responsibilities** define the specific duties, tasks, and expectations assigned to a particular role within an organization. These responsibilities are crucial because they clarify what an employee is expected to do and, in a security context, help determine the level of access they should have to sensitive systems and data.
 Including job responsibilities in the job description ensures:
 - Alignment with Security Policies – Employees understand their role in protecting data and following cybersecurity protocols.
 - Reduced Risk of Insider Threats – Clearly defined duties prevent unauthorized activities.
 - Consistency in Role Expectations – Everyone understands who is responsible for what.
 
+```mermaid
 flowchart TD
     A[Well-Structured Job Description] --> B[Security Benefits]
     B --> B1[Outlines Security Expectations]
@@ -34,4 +36,6 @@ flowchart TD
     D --> D2[Reduces Insider Threats]
     D --> D3[Ensures Consistency in Role Expectations]
 
-  
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
