Update 1.8 Contribute to and enforce personnel security policies and procedures.md

--- a/DOMAIN1: The Cybersecurity Manager/1.8 Contribute to and enforce personnel security policies and procedures.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.8 Contribute to and enforce personnel security policies and procedures.md
@@ -77,3 +77,27 @@ Labeling personnel as "the weakest link" demotivates and creates a blame culture
   <summary>Show answer</summary>
 An employee who is aware of phishing tactics, identifies a suspicious email, and reports it to the IT department prevents a potential security breach, demonstrating their value as a security asset.
 </details>
+
+---
+
+## 1.8.1 Candidate screening and hiring ##
+
+The introduction of new personnel poses a security risk; hence, every organization necessitates personnel security policies, standards, procedures, or guidelines to identify and alleviate this risk through appropriate security measures.These documents ought to detail job descriptions, classification, work tasks, responsibilities, collusion prevention, candidate screening, background checks, security clearances, employment agreements, and nondisclosure agreements. Thoroughly screening employment candidates is vital during the hiring process. Ensure to conduct comprehensive background checks encompassing criminal records, job history verification, education authentication, certification validation, and confirmation of other accolades whenever feasible. Furthermore, it is essential to contact some of the provided references.
+
+:bulb: Thorough screening and in-depth interviews are essential to ensure that only suitable candidates are hired.
+
+```
+:necktie: When evaluating job candidates, organizations must operate within legal boundaries—some screening practices are permitted, while others may violate privacy laws and employment regulations.
+**Permitted Screening Practices (Varies by jurisdiction):**
+- Background checks (criminal history, employment verification)
+- Reference checks (verifying previous work experience)
+- Education verification
+- Legally required security clearances (for specific roles)
+
+**Restricted or Illegal Practices:**
+- Discriminatory questions (race, religion, gender, marital status, etc.)
+- Invasive personal data collection without consent
+- Medical or genetic testing (unless legally justified)
+```
+
+👔Screening activities should match the **sensitivity and risk level of the job role**. Higher-risk positions (e.g., those handling confidential data or financial transactions) may require more in-depth background checks, while lower-risk roles need only basic verification.
