Update 1.8 Contribute to and enforce personnel security policies and procedures.md

--- a/DOMAIN1: The Cybersecurity Manager/1.8 Contribute to and enforce personnel security policies and procedures.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.8 Contribute to and enforce personnel security policies and procedures.md
@@ -86,7 +86,7 @@ The introduction of new personnel poses a security risk; hence, every organizati
 
 :bulb: Thorough screening and in-depth interviews are essential to ensure that only suitable candidates are hired.
 
-```
+
 :necktie: When evaluating job candidates, organizations must operate within legal boundaries—some screening practices are permitted, while others may violate privacy laws and employment regulations.
 **Permitted Screening Practices (Varies by jurisdiction):**
 - Background checks (criminal history, employment verification)
@@ -98,6 +98,74 @@ The introduction of new personnel poses a security risk; hence, every organizati
 - Discriminatory questions (race, religion, gender, marital status, etc.)
 - Invasive personal data collection without consent
 - Medical or genetic testing (unless legally justified)
-```
 
 👔Screening activities should match the **sensitivity and risk level of the job role**. Higher-risk positions (e.g., those handling confidential data or financial transactions) may require more in-depth background checks, while lower-risk roles need only basic verification.
+
+### Open Questions ###
+1. Why are personnel security policies necessary for organizations?
+<details>
+  <summary>Show answer</summary>
+Personnel security policies are necessary to identify and mitigate the security risks posed by new employees. These policies outline procedures and guidelines for various security aspects related to personnel.
+</details>
+
+2. What are two key components that should be included in a job description from a security perspective?
+<details>
+  <summary>Show answer</summary>
+From a security perspective, a job description should clearly outline the tasks and responsibilities associated with the position, as well as the level of access to sensitive information the role entails. This helps determine the necessary security measures and clearances.
+</details>
+
+3. Explain the importance of collusion prevention within an organization.
+<details>
+  <summary>Show answer</summary>
+Collusion prevention strategies aim to prevent employees from working together to bypass security controls or commit fraud. This involves segregating duties, implementing checks and balances, and fostering a culture of accountability.
+</details>
+
+4. What is the purpose of a background check during the hiring process?
+<details>
+  <summary>Show answer</summary>
+Background checks help verify the information provided by a candidate and identify any potential red flags that could pose a security risk. This includes criminal history, employment history discrepancies, or fabricated credentials.
+</details>
+
+5. List three types of information that should be verified during a background check.
+<details>
+  <summary>Show answer</summary>
+Three types of information that should be verified during a background check are: criminal records, employment history, and education credentials. This ensures the candidate's claims are accurate and helps assess their trustworthiness.
+</details>
+
+6. Why is it important to contact references provided by a candidate?
+<details>
+  <summary>Show answer</summary>
+Contacting references allows employers to gain additional insights into the candidate's character, work ethic, and past performance. References can offer valuable information that may not be apparent from the candidate's application or interview.
+</details>
+
+7. What is a security clearance and why might it be required for certain positions?
+<details>
+  <summary>Show answer</summary>
+A security clearance is an official determination that an individual is eligible to access classified information. Certain positions involving sensitive data or national security may require specific clearance levels.
+</details>
+
+8. What is the purpose of an employment agreement?
+<details>
+  <summary>Show answer</summary>
+An employment agreement outlines the terms and conditions of employment, including salary, benefits, responsibilities, and grounds for termination. This legally binds both the employer and employee to the agreed upon terms.
+</details>
+
+9. What is a non-disclosure agreement and what does it typically cover?
+<details>
+  <summary>Show answer</summary>
+A non-disclosure agreement (NDA) is a legally binding contract that prohibits employees from disclosing confidential company information to unauthorized individuals. This protects sensitive data, trade secrets, and intellectual property.
+</details>
+
+10. Besides background checks, what other security measures can be taken during the hiring process?
+<details>
+  <summary>Show answer</summary>
+Other security measures during the hiring process can include conducting psychological evaluations, verifying professional licenses, drug testing, and providing security awareness training to new hires.
+</details>
+
+---
+
+## 1.8.2 Employment agreements and policy driven requirements ##
+
+An employment agreement outlines various aspects of employment, including job responsibilities, compensation, benefits, and termination details. In some cases, such agreements are for a specific duration, such as in contracts or short-term positions. They provide a structured framework for terminating underperforming employees when necessary. The comprehensiveness of an employment agreement correlates with decreased risks, such as the potential for wrongful termination lawsuits. For instance, clear policies regarding email retention can discourage terminated employees from inadvertently taking company data.
+Example employment agreements include non-compete clauses, codes of conduct like an acceptable use policy (AUP) dictating proper use of company resources, and nondisclosure agreements (NDAs) safeguarding confidential information from disclosure by current or former employees. These agreements serve to protect both the organization's interests and the employees' rights and obligations.
+
