Update 1.D.3 Acceptable Use Policy (AUP).md

--- a/DOMAIN1: The Cybersecurity Manager/1.D.3 Acceptable Use Policy (AUP).md
+++ b/DOMAIN1: The Cybersecurity Manager/1.D.3 Acceptable Use Policy (AUP).md
@@ -17,32 +17,34 @@ This policy applies to all employees, contractors, and third-party users who acc
 3. **Acceptable Use**
 
 Users must:
-a. Use company systems for business purposes only.
-b. Protect login credentials and report any unauthorized access.
-c. Follow data classification policies when handling sensitive information.
 
-*Enforcing proper data handling aligns with confidentiality principles of the CIA triad *
+- Use company systems for business purposes only.
+- Protect login credentials and report any unauthorized access.
+- Follow data classification policies when handling sensitive information.
+
+*Enforcing proper data handling aligns with confidentiality principles of the CIA triad*
 
 4. **Unacceptable Use**
 
 Users must NOT:
-a. Install unauthorized software or connect personal devices.
-b. Share company data without authorization.
-c. Engage in activities that violate laws, such as hacking or data theft.
 
-*Restricting unauthorized actions mitigates insider threats and enforces security controls *
+- Install unauthorized software or connect personal devices.
+- Share company data without authorization.
+- Engage in activities that violate laws, such as hacking or data theft.
+
+*Restricting unauthorized actions mitigates insider threats and enforces security controls*
 
 5. **Monitoring & Enforcement**
 
 The company reserves the right to monitor system activity. Violations may result in disciplinary action, including termination.
 
-* Monitoring ensures accountability and supports security governance *
+*Monitoring ensures accountability and supports security governance*
 
 6. **Acknowledgment**
 
 By using company systems, users agree to comply with this policy. Non-compliance may lead to penalties under company policies and applicable laws.
 
-* Acknowledgment reinforces legal enforceability and compliance *
+*Acknowledgment reinforces legal enforceability and compliance*
 
 [Company Name]
 [Department Contact] | [Policy Owner]
